Passage en full english